--- a/Assig_2_Data_structure.ipynb
+++ b/Assig_2_Data_structure.ipynb
@@ -9,167 +9,211 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "1f41d280-ebd3-4d4d-a5a8-8c9b5ce4771f",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "92346fed-9cf2-4913-acdb-82ba11218402",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "1) What are data structures, and why are they important?\n",
-    "=== data stucture are the way of organizing , storing data and manipulating data.\n",
-    "    data structure are important as it gives the flexibility to store different type of data,to access data,to perform    different operation on data .  "
+    "# 1) What are data structures, and why are they important?\n",
+    "# === data stucture are the way of organizing , storing data and manipulating data.\n",
+    "#     data structure are important as it gives the flexibility to store different type of data,to access data,to perform    different operation on data .  "
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "8b0da85f-9fc7-4213-88ce-c005b7b41b66",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ebb50022-4d27-4dde-aaab-3355605d7a8e",
    "metadata": {},
+   "outputs": [],
    "source": [
-    " 2)Explain the difference between mutable and immutable data types with examples?\n",
-    "===$ mutable\n",
-    "  -mulable data types follow the item assignment property.\n",
-    "  -we can change the values in mutable data types.\n",
-    "  -example :list ,Dictionary\n",
+    "#  2)Explain the difference between mutable and immutable data types with examples?\n",
+    "# ===$ mutable\n",
+    "#   -mulable data types follow the item assignment property.\n",
+    "#   -we can change the values in mutable data types.\n",
+    "#   -example :list ,Dictionary\n",
     "\n",
-    "   $ immutable\n",
-    "   -immutable data types does not follow item assignmment property.\n",
-    "   -we cant change the value of immutable data type one's given\n",
-    "   -example : String ,tuple"
+    "#    $ immutable\n",
+    "#    -immutable data types does not follow item assignmment property.\n",
+    "#    -we cant change the value of immutable data type one's given\n",
+    "#    -example : String ,tuple"
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "70efa89f-e85e-4384-add1-0537ac0c0bf7",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "efb1c9a7-ea8b-4e1c-a98b-ec3f8e9cec9b",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "3) What are the main differences between lists and tuples in Python?\n",
-    "===$ Lists\n",
-    " - list are mutable data type.\n",
-    " - We can store values which we can change in future.\n",
+    "# 3) What are the main differences between lists and tuples in Python?\n",
+    "# ===$ Lists\n",
+    "#  - list are mutable data type.\n",
+    "#  - We can store values which we can change in future.\n",
     "\n",
-    "  $Tuple \n",
-    " - tuple are immutable data type\n",
-    " - We store values which are unique and cant be change."
+    "#   $Tuple \n",
+    "#  - tuple are immutable data type\n",
+    "#  - We store values which are unique and cant be change."
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "fab7eadf-c033-4bdc-a67f-6addbb52dcdb",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6bf8790e-0595-4596-9c7c-fddc9592652b",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "4)Describe how dictionaries store data\n",
-    "=== dictionary store data in the form of key value pairs,every key contain an unique value.\n",
-    "syntax:dictonary_ = {'key_1':'value_1',\"key_2\":\"value_2\"}"
+    "# 4)Describe how dictionaries store data\n",
+    "# === dictionary store data in the form of key value pairs,every key contain an unique value.\n",
+    "# syntax:dictonary_ = {'key_1':'value_1',\"key_2\":\"value_2\"}"
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "41da50ca-6808-46cc-a9c3-1eaa498cddc6",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "036f498b-4a8e-4d5c-b571-603db482961a",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "5)  Why might you use a set instead of a list in Python?\n",
-    "=== we can use set instead of list because set are also mutable and can store different types of data but instead of repeating same value it only store one unique value ,set is collection of unique values."
+    "# 5)  Why might you use a set instead of a list in Python?\n",
+    "# === we can use set instead of list because set are also mutable and can store different types\n",
+    "# of data but instead of repeating same value it only store one unique value ,set is collection of \n",
+    "# unique values."
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "de6b2e53-1d88-4cff-8fff-a31d4171b3bc",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f9914a5-81fd-4470-9aca-2981b342890b",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "6) What is a string in Python, and how is it different from a list?\n",
-    "=== string is a sequence of character stored in specific sequence.\n",
-    "string is different from list as it is immutable in nature and can only store string data type ."
+    "# 6) What is a string in Python, and how is it different from a list?\n",
+    "# === string is a sequence of character stored in specific sequence.\n",
+    "# string is different from list as it is immutable in nature and can only store string data type ."
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "14f2e50e-dea2-438d-8150-9e54e5f4bdcd",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "96f2af7e-235c-4548-a6ac-19b88e450bfc",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "7) How do tuples ensure data integrity in Python?\n",
-    " --- tuples insure data integrity with the help of immutability.As data in tuple is immutable once data is stored in tuple can't be modified or cant be changed this increases the reliability of data as it cant be changed by any unotherized user or person."
+    "# 7) How do tuples ensure data integrity in Python?\n",
+    "#  --- tuples insure data integrity with the help of immutability.As data in tuple is immutable once data\n",
+    "# is stored in tuple can't be modified or cant be changed this increases the reliability of data as\n",
+    "# it cant be changed by any unotherized user or person."
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "71c1aafe-11e5-4ff2-92f2-ec050931a242",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82d1a7f6-f59c-4614-a6c8-0b3e1c5c7dbd",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "8)What is a hash table, and how does it relate to dictionaries in Python?\n",
-    "---hash table is table which contains value in key value format and keys as generated with the  help of hash function. Similar to hash table dictionaries also contain values in key value format."
+    "# 8)What is a hash table, and how does it relate to dictionaries in Python?\n",
+    "# ---hash table is table which contains value in key value format and keys as generated with the \n",
+    "# help of hash function. Similar to hash table dictionaries also contain values in key value format."
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "9cac013f-2d17-48f9-8f41-4b5b22f8fa57",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ead41e8d-d5c0-4ef4-91fd-797bf819083a",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "9)Can lists contain different data types in Python?\n",
-    "---Yes. list can contain different data types such as string ,integer ,float,boolean.|"
+    "# 9)Can lists contain different data types in Python?\n",
+    "# ---Yes. list can contain different data types such as string ,integer ,float,boolean.|"
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "77cca4fb-738f-46a1-a089-5a59229fb643",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a4abfa69-03e7-4a38-99dd-ef5b071d4152",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "10)Explain why strings are immutable in Python?\n",
-    "---strings are immutable in python to ensure data consistency,integrity ,safety and efficiency."
+    "# 10)Explain why strings are immutable in Python?\n",
+    "# ---strings are immutable in python to ensure data consistency,integrity ,safety and efficiency."
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "eac49093-e531-4d7a-9988-668216142d32",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c1de6be9-91dd-45f2-b734-9769e0b7311a",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "11)What advantages do dictionaries offer over lists for certain tasks?\n",
-    "---dictionaries increses the readability and accessibility of data. Dictionaries offer key value pairs of data which simplifies the data accessing .For every value of data there is a unique key.For tasks such as accessing a employee data dictionaries are more useful as it provides data in key value pairs."
+    "# 11)What advantages do dictionaries offer over lists for certain tasks?\n",
+    "# ---dictionaries increses the readability and accessibility of data. Dictionaries offer key\n",
+    "# value pairs of data which simplifies the data accessing .For every value of data there is a \n",
+    "# unique key.For tasks such as accessing a employee data dictionaries are more useful as it provides \n",
+    "# data in key value pairs."
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "053454ae-878f-401d-b906-05ee85aa9d52",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "92bc901c-d310-431c-9d03-230b81627311",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "12)Describe a scenario where using a tuple would be preferable over a list.\n",
-    "---In senarios where data changes are not require using tuple over list will be preferable.\n",
-    "consider bank transaction details that should not change in any situations so using tuple will be more preferable in that senario."
+    "# 12)Describe a scenario where using a tuple would be preferable over a list.\n",
+    "# ---In senarios where data changes are not require using tuple over list will be preferable.\n",
+    "# consider bank transaction details that should not change in any situations so using tuple will be \n",
+    "# more preferable in that senario."
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "b832e1b7-a67c-456b-b30f-89b2dfd3ba5d",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "362c850c-23bd-4333-ad8a-3f135694bb88",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "13)How do sets handle duplicate values in Python?\n",
-    "--- set does not allow duplicate values .If we insert duplicate values then set retains only one value and removes the duplicate."
+    "# 13)How do sets handle duplicate values in Python?\n",
+    "# --- set does not allow duplicate values .If we insert duplicate values then set retains only one \n",
+    "# value and removes the duplicate."
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "56ce9bcd-c81a-4cc6-ac62-59ae998ae4fa",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fbfb8886-7357-4187-ba24-6e08f39539b6",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "14)How does the “in” keyword work differently for lists and dictionaries?\n",
-    "--- 'in' keyword in list works on values present in list and 'in' keyword in dictionaries works on keys present in dictinaries."
+    "# 14)How does the “in” keyword work differently for lists and dictionaries?\n",
+    "# --- 'in' keyword in list works on values present in list and 'in' keyword in dictionaries works on \n",
+    "# keys present in dictinaries."
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "d7bf96ca-94e2-4ac3-8a59-743075b5c3e4",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10d0e0f1-de10-4193-9968-8aea1746787d",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "15)Can you modify the elements of a tuple? Explain why or why not?\n",
-    "--- We cant modify the elements of a tuple .\n",
-    "because tuple is immutable data structure ,it doesnt allow item assignment .Once tuple is define values cant be changed or modified."
+    "# 15)Can you modify the elements of a tuple? Explain why or why not?\n",
+    "# --- We cant modify the elements of a tuple .\n",
+    "# because tuple is immutable data structure ,it doesnt allow item assignment .Once tuple is define \n",
+    "# values cant be changed or modified."
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "67522be0-f38e-44f5-b896-89af539863f6",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b26f6680-e8ee-43bd-aff0-2fee95b6df59",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "16)What is a nested dictionary, and give an example of its use case?\n",
-    "---nested dictionary means defining a dictionary inside a dictionary.\n",
-    "use case -Employee data of a company\n"
+    "# 16)What is a nested dictionary, and give an example of its use case?\n",
+    "# ---nested dictionary means defining a dictionary inside a dictionary.\n",
+    "# use case -Employee data of a company\n"
    ]
   },
   {
@@ -197,43 +241,56 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "038660d3-0ecf-4994-981c-95d1c3e39ccf",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c81db373-c82c-4271-bbc7-3b6ee3690850",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "17)Describe the time complexity of accessing elements in a dictionary.\n",
-    "--- Time complexity of accessing elements in dictionary is O(1) because dictinaries work on hash values with constant time complexity on an average."
+    "# 17)Describe the time complexity of accessing elements in a dictionary.\n",
+    "# --- Time complexity of accessing elements in dictionary is O(1) because dictinaries work on hash values\n",
+    "# with constant time complexity on an average."
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "dd93c33d-2fa4-42de-be4a-5c4c528fd112",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1f6a0b31-7bd6-42ef-907d-7bdab71c16fd",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "18) In what situations are lists preferred over dictionaries?\n",
-    "--- when we only want to store data such as string values ,list of integer where unique keys are not required.\n",
-    "- when we want to acccess data in the order of insertion .\n",
-    "- when we want index based retrival of data ."
+    "# 18) In what situations are lists preferred over dictionaries?\n",
+    "# --- when we only want to store data such as string values ,list of integer where unique keys are not \n",
+    "#     required.\n",
+    "# - when we want to acccess data in the order of insertion .\n",
+    "# - when we want index based retrival of data ."
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "118e5178-6e76-4a82-8bd3-15ccd46ed128",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37739376-bf5f-4a0c-9ce2-910c3660ce24",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "19) Why are dictionaries considered unordered, and how does that affect data retrieval?\n",
-    "--- Dictionaries are considered as unordered because the doesnt retain the order of insertion data can change its position ,key value pairs does not have any specific index. \n",
-    "It  affects data retrival as we cant access values from its index position."
+    "# 19) Why are dictionaries considered unordered, and how does that affect data retrieval?\n",
+    "# --- Dictionaries are considered as unordered because the doesnt retain the order of insertion data \n",
+    "# can change its position ,key value pairs does not have any specific index. \n",
+    "# It  affects data retrival as we cant access values from its index position."
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "8eb6dea2-338a-4490-b483-a76dd28107a7",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0aebcbbb-1bc9-4a8a-a655-f600a56a436f",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "20) Explain the difference between a list and a dictionary in terms of data retrieval.\n",
-    "---list contains the fixed index position for each value in list so that we can access data with the help of data index value.\n",
-    "- Dictionaries does not have index value for data so we cant retrive data with the help of index but we can retrive data with help of unique keys."
+    "# 20) Explain the difference between a list and a dictionary in terms of data retrieval.\n",
+    "# ---list contains the fixed index position for each value in list so that we can access data with \n",
+    "# the help of data index value.\n",
+    "# - Dictionaries does not have index value for data so we cant retrive data with the help of index but \n",
+    "# we can retrive data with help of unique keys."
    ]
   },
   {
